--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pydantic = "^2.8.2"
+fastapi = "^0.115.6"
 
 [build-system]
 requires = ["poetry-core"]
